--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
 Flask==2.3.3
 flask-cors==4.0.0
 SQLAlchemy==1.4.52
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.19
 python-dotenv==1.0.0
 PyJWT==2.8.0
 bcrypt==4.1.2
-gunicorn==20.1.0
+gunicorn==21.2.0
